upgraded to umbraco 13

--- a/SgfDevs/appsettings.json
+++ b/SgfDevs/appsettings.json
@@ -20,6 +20,18 @@
     "CMS": {
       "Global": {
         "Id": "eb41b267-4c02-43fd-b315-cee566710902"
+      },
+      "Unattended": {
+        "UpgradeUnattended": true
+      }
+    }
+  },
+  "uSync": {
+    "Publisher": {
+      "Settings": {
+        "IncomingEnabled": true,
+        "AppId": "f682f3da-ed2e-405e-a18d-5abfed94f58f",
+        "AppKey": "qeToziRhsK1xXWyaZSp5Ke25G/WwNOd31PzV1uEoiGE="
       }
     }
   }
